[package]
name = "async_io_utilities"
version = "0.1.1"
edition = "2021"
authors = ["Harry [hello@majored.pw]"]
repository = "https://github.com/Majored/rs-async-io-utilities"
description = "An asynchronous IO utilities crate powered by `tokio`."
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/async_io_utilities/"
homepage = "https://github.com/Majored/rs-async-io-utilities"
keywords = ["async","tokio"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }